RESOLVED FIXED51483
CSS 2.1 failure: counter-increment-013 fails
https://bugs.webkit.org/show_bug.cgi?id=51483
Summary CSS 2.1 failure: counter-increment-013 fails
Simon Fraser (smfr)
Reported 2010-12-22 11:02:06 PST
html4/counter-increment-013 fails.
Attachments
Patch (4.14 KB, patch)
2010-12-22 11:03 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2010-12-22 11:03:20 PST
mitz
Comment 2 2010-12-22 11:07:22 PST
Comment on attachment 77239 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=77239&action=review > WebCore/css/CSSParser.cpp:131 > + const double minIntAsDouble = INT_MIN; > + const double maxIntAsDouble = INT_MAX; Please use numeric_limits<int> instead of the C macros.
Simon Fraser (smfr)
Comment 3 2010-12-22 11:19:47 PST
WebKit Review Bot
Comment 4 2010-12-22 12:45:12 PST
http://trac.webkit.org/changeset/74491 might have broken GTK Linux 32-bit Release The following tests are not passing: http/tests/local/stylesheet-and-script-load-order-media-print.html
Note You need to log in before you can comment on or make changes to this bug.