2010-12-22  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        CSS 2.1 failure: counter-increment-013 fails
        https://bugs.webkit.org/show_bug.cgi?id=51483

        Clamp the counter-increment property to the valid range of signed
        integers.

        Test: fast/css/counters/counter-increment-overflow.html

        * css/CSSParser.cpp:
        (WebCore::clampToSignedInteger):
        (WebCore::CSSParser::parseCounter):

Canonical link: https://commits.webkit.org/64832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74491 268f45cc-cd09-0410-ab3c-d52691b4dbfc