WebCore/css/CSSParser.cpp
@@ -125,6 +125,13 @@ static bool hasPrefix(const char* string, unsigned length, const char* prefix)
     return false;
 }
 
+static int clampToSignedInteger(double d)
+{
+    const double minIntAsDouble = std::numeric_limits<int>::min();
+    const double maxIntAsDouble = std::numeric_limits<int>::max();
+    return static_cast<int>(max(minIntAsDouble, min(d, maxIntAsDouble)));
+}
+
 CSSParser::CSSParser(bool strictParsing)
     : m_strict(strictParsing)
     , m_important(false)
@@ -4625,7 +4632,7 @@ bool CSSParser::parseCounter(int propId, int defaultValue, bool important)
             case VAL: {
                 int i = defaultValue;
                 if (val && val->unit == CSSPrimitiveValue::CSS_NUMBER) {
-                    i = (int)val->fValue;
+                    i = clampToSignedInteger(val->fValue);
                     m_valueList->next();
                 }
 
